--- a/settings/static/settings/css/settings.css
+++ b/settings/static/settings/css/settings.css
@@ -109,7 +109,7 @@ li{
 
 button{
     cursor: pointer;
-    width: 100px;
+    width: 120px;
     height: 30px;
     margin-left: 1%;
     background-color: #5A7FAF;
